--- a/ansible/group_vars/all/mqtt.yml
+++ b/ansible/group_vars/all/mqtt.yml
@@ -1,1 +1,1 @@
-mqtt_broker_url: "mqtts://dlock-firmware:{{vault_mqtt_password_firmware}}@dlock.trygvis.io"
+mqtt_broker_url: "mqtts://dlock-firmware:{{vault_mqtt_password_firmware}}@dlock.bitraf.no"
