use Bitraf's fork of the repo

--- a/ansible/roles/dlock-gateway/tasks/main.yml
+++ b/ansible/roles/dlock-gateway/tasks/main.yml
@@ -29,7 +29,7 @@
 
   - name: Check out dlock repository
     git:
-      repo: 'https://github.com/jonnor/dlock-oslo'
+      repo: 'https://github.com/bitraf/UnlockOslo'
       dest: /opt/dlock/src
       version: master
 
