add package curl

--- a/ansible/roles/dlock-gateway/tasks/main.yml
+++ b/ansible/roles/dlock-gateway/tasks/main.yml
@@ -13,6 +13,7 @@
         - git
         - certbot
         - ack
+        - curl
       install_recommends: no
 
   - name: dlock unprivileged user
