change 'reload' to 'restart' for dlock-gateway handler, to avoid 'Job type reload is not applicable' error

--- a/ansible/roles/dlock-gateway/handlers/main.yml
+++ b/ansible/roles/dlock-gateway/handlers/main.yml
@@ -1,7 +1,7 @@
 - name: restart dlock-gateway
   systemd:
     name: dlock-gateway
-    state: reloaded
+    state: restarted
 
 - name: reload nginx
   systemd:
