remove mitogen, it doesn't support recent ansible releases

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -4,8 +4,8 @@ inventory = inventory
 stdout_callback = debug
 retry_files_enabled = False
 
-strategy_plugins = ../mitogen-0.2.9/ansible_mitogen/plugins/strategy
-strategy = mitogen_linear
+#strategy_plugins = ../mitogen-0.2.9/ansible_mitogen/plugins/strategy
+#strategy = mitogen_linear
 
 [privilege_escalation]
 become=True
