update name of python3-setuptools package

--- a/ansible/roles/dlock-gateway/tasks/main.yml
+++ b/ansible/roles/dlock-gateway/tasks/main.yml
@@ -9,7 +9,7 @@
         - python3
         - python3-pip
         - virtualenv
-        - python-setuptools
+        - python3-setuptools
         - git
         - certbot
         - ack
