another python -> python3 package name update

--- a/ansible/roles/mqtt-server/tasks/main.yml
+++ b/ansible/roles/mqtt-server/tasks/main.yml
@@ -7,7 +7,7 @@
       name:
         - mosquitto
         - mosquitto-clients
-        - python-passlib
+        - python3-passlib
       install_recommends: no
 
   - name: Mosquitto configuration
